--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="navbar-icon-container">
             <a href="#" class="navbar-icon pull-right visible-xs" id="nav-btn"><i class="fa fa-bars fa-lg white"></i></a>
           </div>
-          <a class="navbar-brand" href="https://bootleaf.xyz">Bootleaf homepage</a>
+          <a class="navbar-brand" href="https://bootleaf.xyz">Demo Preview for KKHL WebGIS App from Seanode Layers</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
